2020-10-24  Antonio Ceballos  <aceballos@gmail.com>

	* Remove compilation warnings: unused variables, signed-unsigned

2020-10-23  Simon Waters <simon@technocool.net>

	* Avoid overlapping strings on 'pgnsave'

2020-05-31  Antonio Ceballos  <aceballos@gmail.com>

	* Release 6.2.7

2020-05-04  David Seifert <soap@gentoo.org>  (tiny change)

	* Pre-release 6.2.7-pre1
	* Patch for hardcoded ar

2020-05-02  Antonio Ceballos  <aceballos@gmail.com>

	* Basic test for command 'pgnload'
	* Basic test for commands 'load' and 'epdload'

2020-04-26  Antonio Ceballos  <aceballos@gmail.com>

	* Test harness based on Catch2
	* Add translatable string

2020-04-21  Jens.Schleusener <Jens.Schleusener@fossies.org>  (tiny change)

	* Fix 'unsinged' typo for 'unsigned'

2020-04-19  Antonio Ceballos  <aceballos@gmail.com>

	* Remove temporary EPD file after loading PGN file

2020-04-18  Antonio Ceballos  <aceballos@gmail.com>

	* ChangeLog: Release 6.2.6
	* NEWS: Release 6.2.6
	* configure.ac: Release 6.2.6
	* doc/version.texi: Release 6.2.6
	* po/gnuchess.pot: Update POT file
	* po/*.po: Update translations

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* ChangeLog: Pre-release 6.2.6-pre3
	* NEWS: Pre-release 6.2.6-pre3
	* configure.ac: Pre-release 6.2.6-pre3
	* doc/version.texi: Pre-release 6.2.6-pre3

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* po/gnuchess.pot: Update POT file.

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/cmd.cc: Fix buffer overflow while copying string

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/pgn.cc: Improve comment for translators.

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* test/commands/test_command.tcl: Add colon at the end of expected output.

2020-03-22  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: Pre-release 6.2.6-pre2
	* configure.ac: Pre-release 6.2.6-pre2
	* doc/version.texi: Pre-release 6.2.6-pre2